<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".MainActivity">

<ImageView
    android:id="@+id/iv_wc"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_width="wrap_content"
    android:layout_marginTop="60dp"
    android:baseline="@dimen/connexion_size"
    android:background="@drawable/ic_wc_black_24dp"
    android:layout_height="wrap_content"
     />

    <TextView
        android:id="@+id/tv_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGradientStart"
        app:layout_constraintLeft_toLeftOf="@id/iv_wc"
        app:layout_constraintTop_toBottomOf="@id/iv_wc"
        app:layout_constraintRight_toLeftOf="@id/tv_connexion2"
        android:text="@string/connexion"
        android:textSize="@dimen/connexion_size"
        />
    <TextView
        android:id="@+id/tv_connexion2"
        app:layout_constraintRight_toRightOf="@id/iv_wc"
        app:layout_constraintLeft_toRightOf="@id/tv_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/iv_wc"
        android:text="@string/connexion2"
        android:textSize="@dimen/connexion_size"
        />



    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FindAndMeetPeople"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/tv_connexion"
        app:layout_constraintLeft_toLeftOf="@id/iv_wc"
        app:layout_constraintRight_toRightOf="@id/iv_wc"
        />
    
    
    <TextView
        android:id="@+id/tv_next_info"
        android:text="@string/youToFindLove"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintLeft_toLeftOf="@id/tv_info"
        app:layout_constraintRight_toRightOf="@id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
    android:id="@+id/btn_Sign_in_Twit"
        android:paddingVertical="@dimen/margin_Size24dp"
    app:layout_constraintTop_toBottomOf="@id/iv_wc"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="@id/tv_next_info"
    app:layout_constraintRight_toRightOf="@+id/tv_next_info"
    android:layout_width="match_parent"
    android:layout_marginEnd="@dimen/margin_Size"
    android:layout_marginStart="@dimen/margin_Size"
    android:layout_height="wrap_content"
        android:textColor="@color/colorGradientStart"
        android:text="@string/Sign_in_Twit"
    android:background="@drawable/shape"/>


    <Button
        android:id="@+id/btn_sign_in_FB"
        android:paddingVertical="@dimen/margin_Size24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_Sign_in_Twit"
        app:layout_constraintRight_toRightOf="@id/btn_Sign_in_Twit"
        app:layout_constraintLeft_toLeftOf="@id/btn_Sign_in_Twit"
        android:layout_marginBottom="@dimen/connexion_size"
        android:layout_width="match_parent"
        android:text="@string/Sign_in_FB"
        android:layout_marginEnd="@dimen/connexion_size"
        android:layout_marginStart="@dimen/connexion_size"
        android:textColor="@color/colorGradientStart"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"/>


    <Button
        android:id="@+id/btn_sign_in"
        android:paddingVertical="@dimen/margin_Size24dp"
        app:layout_constraintTop_toBottomOf="@id/btn_Sign_in_Twit"
        app:layout_constraintLeft_toLeftOf="@id/btn_Sign_in_Twit"
        app:layout_constraintRight_toRightOf="@id/btn_Sign_in_Twit"
        android:text="@string/Sign_in"
        android:layout_marginTop="@dimen/margin_Size"
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/connexion_size"
        android:layout_marginStart="@dimen/connexion_size"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGradientStart"
        android:background="@drawable/shape"/>


    <TextView
        android:id="@+id/tv_already_have_acc"
        android:text="@string/alreadyRegistered"
        android:textColor="@color/colorWhite"
       app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintLeft_toLeftOf="@+id/btn_sign_in"
        app:layout_constraintRight_toRightOf="@+id/btn_sign_in"
        android:layout_marginTop="@dimen/connexion_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>